# enterprise-retrieval-gateway

./: .gitignore  AGENTS.md  CMakeLists.txt  EnterpriseRetrievalGateway_执行计划书.md  Makefile  README.md  WINDOWS_RUNBOOK.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-pages.yml
config/: gateway.example.json  opensearch-index.json  opensearch-pipeline.json
datasets/demo_acl/: users.json
datasets/demo_documents/: chunks.jsonl
datasets/evaluation/: queries.jsonl  relevance_judgments.jsonl
docs/: acl-model.md  architecture.md  benchmark.md  bug-notes.md  evaluation.md  failure-cases.md  incremental-indexing.md  retrieval-strategy.md
include/retrieval_gateway/api/: http_server.h  request_mapper.h
include/retrieval_gateway/auth/: access_context.h  access_policy_resolver.h  acl_filter_builder.h  supabase_auth.h
include/retrieval_gateway/backend/: in_memory_opensearch_client.h  opensearch_http_client.h  search_backend.h
include/retrieval_gateway/common/: clock.h  demo_data.h  json_util.h  parse_util.h  text.h
include/retrieval_gateway/indexing/: document_change.h  document_chunk.h  embedding_provider.h  incremental_indexer.h
include/retrieval_gateway/metrics/: query_metrics_recorder.h  search_trace.h
include/retrieval_gateway/search/: filter_aware_query_planner.h  query_plan.h  result_deduplicator.h  retrieval_gateway.h  rrf_fusion.h  search_hit.h  search_request.h  search_response.h
scripts/: bootstrap_opensearch.py  build_demo_dataset.py  export_static_demo_data.py  export_supabase_seed.py  generate_embeddings.py  ingest_documents.py  run_benchmark.py  run_evaluation.py
src/: main.cpp
src/api/: http_server.cpp  request_mapper.cpp
src/auth/: access_policy_resolver.cpp  acl_filter_builder.cpp  supabase_auth.cpp
src/backend/: in_memory_opensearch_client.cpp  opensearch_http_client.cpp
src/common/: demo_data.cpp  json_util.cpp  parse_util.cpp  text.cpp
src/indexing/: embedding_provider.cpp  incremental_indexer.cpp
src/metrics/: query_metrics_recorder.cpp
src/search/: filter_aware_query_planner.cpp  query_plan.cpp  result_deduplicator.cpp  retrieval_gateway.cpp  rrf_fusion.cpp
supabase/: auth-bindings.example.json  schema.sql
tests/cli/: test_cli.sh
tests/integration/: test_opensearch_backend.cpp
tests/unit/: test_core.cpp
tools/request_examples/: curl_demo.sh  search_backend_user.json  search_finance_user.json
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/public/data/: demo_data.json
web/src/: App.tsx  styles.css  types.ts
web/src/api/: localGateway.ts  supabaseClient.ts  supabaseSearch.ts
web/src/components/: AboutPanel.tsx  AccessGate.tsx  DebugPanel.tsx  MetricsPanel.tsx  ResultCard.tsx  SearchControls.tsx  SupabaseAuthPanel.tsx
web/src/lib/: acl.ts  (+4 more)
